Employee Project Allocation- 25 July